[gd_scene load_steps=5 format=3 uid="uid://c78hfp1p86s4b"]

[ext_resource type="Theme" uid="uid://brcmi4hjnlr62" path="res://Things/UI/Theme.tres" id="1_gxbnq"]
[ext_resource type="Script" uid="uid://caisho6pgmlet" path="res://Things/UI/OrderDisplay/coffee_order_display.gd" id="2_8pkaf"]
[ext_resource type="Texture2D" uid="uid://nld78sq3ummg" path="res://Things/UI/OrderDisplay/order_ticket.png" id="3_8pkaf"]
[ext_resource type="Texture2D" uid="uid://48i6urwj2t5k" path="res://Things/UI/OrderDisplay/circleforticket.png" id="4_mxupe"]

[node name="CoffeeOrderDisplay" type="Control"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_gxbnq")
script = ExtResource("2_8pkaf")

[node name="Circle" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 876.0
offset_bottom = 1250.0
texture = ExtResource("4_mxupe")

[node name="Ticket" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -174.0
offset_top = -301.0
offset_right = 680.0
offset_bottom = 600.0
texture = ExtResource("3_8pkaf")

[node name="MediumPosition" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LargePosition" type="Control" parent="."]
anchors_preset = 0
offset_left = 108.0
offset_top = -319.0
offset_right = 148.0
offset_bottom = -279.0

[node name="SmallPosition" type="Control" parent="."]
anchors_preset = 0
offset_left = -171.0
offset_top = -299.0
offset_right = -131.0
offset_bottom = -259.0

[node name="SyrupLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 266.0
offset_top = 372.0
offset_right = 360.0
offset_bottom = 435.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Text"

[node name="MilkLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 277.0
offset_top = 263.0
offset_right = 371.0
offset_bottom = 326.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Text"

[node name="ShotsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 310.0
offset_top = 490.0
offset_right = 404.0
offset_bottom = 553.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 45
text = "Text"
